parslers-benchmark/src/tests/invalid/syntaxErr/basic/bgnErr.wacc
# begin token typo

# Output:
# #syntax_error#

# Exit:
# 100

# Program:

bgn skip end
